--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
 .container {
@@ -25,6 +25,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+  margin-top: 4rem;
 }
 
 header {
