--- a/style.css
+++ b/style.css
@@ -6,7 +6,10 @@
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
+  background-image: url(https://images.unsplash.com/photo-1484480974693-6ca0a78fb36b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -31,7 +34,7 @@ body {
 header {
   font-size: 2rem;
   color: black;
-  text-shadow: 3px 5px 5px rgba(0, 0, 0, 0.7);
+  text-shadow: 3px 3px 15px rgba(0, 0, 0, 0.7);
   text-align: center;
   padding: 1rem;
 }
@@ -42,14 +45,16 @@ header {
   margin-top: 1rem;
   font-size: 0.5rem;
 }
+
 #todo-input {
   width: 80%;
   margin-right: 10px;
-  border-color: #fff;
   border-radius: 10px;
   outline: none;
   padding: 0.5rem;
   font-size: 1rem;
+  border: none;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
 }
 
 #todo-button {
@@ -61,10 +66,16 @@ header {
   font-weight: bold;
   border-radius: 10px;
   border: none;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.3);
+  transition: all 0.2s;
 }
 
 #todo-button:hover {
   opacity: 0.5;
+}
+
+#todo-button:active {
+  scale: 95%;
 }
 
 .todos {
@@ -85,7 +96,7 @@ ul li {
   margin-bottom: 1rem;
   display: flex;
   align-items: center;
-  transition: all 0.5s;
+  transition: all 0.3s;
 }
 
 ul li:nth-child(even) {
@@ -94,6 +105,8 @@ ul li:nth-child(even) {
 
 ul li:hover {
   transform: translate(10px);
+  background-color: white;
+  /* color: #5d20bf; */
 }
 
 li i {
